--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
 The '''ImportFreeImages''' extension allows users to import properly licensed photos directly into their wiki from flickr.
 
 == License ==
@@ -13,7 +12,7 @@ the Free Software Foundation; either version 2 of the License, or
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
@@ -26,23 +25,23 @@ Travis Derouin ( travis @ wikihow.com)
 
 == Pre-requisites ==
 
-This extension was tested with MediaWiki 1.16. For MediaWiki 1.15, please download a 1.15 snapshot from 
+This extension was tested with MediaWiki 1.16. For MediaWiki 1.15, please download a 1.15 snapshot from
 [http://www.mediawiki.org/wiki/Special:ExtensionDistributor/ImportFreeImages MediaWiki.org]
 
 == Configuration & Installation ==
 
-* Get the source via [http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/ImportFreeImages SVN]
+* Get the source via git clone https://gerrit.wikimedia.org/r/mediawiki/extensions/ImportFreeImages
 * You have to have already set up uploads to work properly on your wiki.
 * You may have to manually create the wgTmpDirectory (typically wiki/images/tmp)
-* Download and install [http://sourceforge.net/projects/phpflickr phpflickr 2.x] and put it in the directory extensions/ImportFreeImages (so you should have a directory wiki/extensions/phpFlickr-2.0.0). 
+* Download and install [http://sourceforge.net/projects/phpflickr phpflickr 2.x] and put it in the directory extensions/ImportFreeImages (so you should have a directory wiki/extensions/phpFlickr-2.0.0).
 * Add this line to your LocalSettings.php
 <pre>
 require_once('extensions/ImportFreeImages/ImportFreeImages.php');
 </pre>
 * Get yourself an API Key from [http://www.flickr.com/services/api/misc.api_keys.html here] and set $wgIFI_FlickrAPIKey to this key in LocalSettings.php
 
-== Options == 
-* Configure $wgResultsPerPage and $wgResultsPerRow if you desire. 
+== Options ==
+* Configure $wgResultsPerPage and $wgResultsPerRow if you desire.
 * Change which license photos are searched by changing $wgFlickrLicense, by default it's '4', which is CC Attribution License. See more info [http://www.flickr.com/services/api/flickr.photos.licenses.getInfo.html here]
 * Change how the results are sorted by altering $wgFlickrSort, see more [http://www.flickr.com/services/api/flickr.photos.search.html here].
 
