Convert mediawiki links from http to https
Bug: T189687
Change-Id: If59881559957134b2dbec736b363a72c6f5bd449

--- a/README
+++ b/README
@@ -26,7 +26,7 @@ Travis Derouin ( travis @ wikihow.com)
 == Pre-requisites ==
 
 This extension was tested with MediaWiki 1.16. For MediaWiki 1.15, please download a 1.15 snapshot from
-[http://www.mediawiki.org/wiki/Special:ExtensionDistributor/ImportFreeImages MediaWiki.org]
+[https://www.mediawiki.org/wiki/Special:ExtensionDistributor/ImportFreeImages MediaWiki.org]
 
 == Configuration & Installation ==
 
