--- a/README
+++ b/README
@@ -36,7 +36,7 @@ This extension was tested with MediaWiki 1.16. For MediaWiki 1.15, please downlo
 * Download and install [http://sourceforge.net/projects/phpflickr phpflickr 2.x] and put it in the directory extensions/ImportFreeImages (so you should have a directory wiki/extensions/phpFlickr-2.0.0).
 * Add this line to your LocalSettings.php
 <pre>
-require_once('extensions/ImportFreeImages/ImportFreeImages.php');
+wfLoadExtension( 'ImportFreeImages' );
 </pre>
 * Get yourself an API Key from [http://www.flickr.com/services/api/misc.api_keys.html here] and set $wgIFI_FlickrAPIKey to this key in LocalSettings.php
 
